--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-web: gunicorn LS_messaging_system_abra.wsgi:application --bind 0.0.0.0:$PORT
+web: gunicorn LS_messaging_system_abra.wsgi:application --bind=0.0.0.0 --workers=3 --timeout=90
